Add react and react-dom types, set up dev build

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "npm run build:main && npm run build:renderer",
     "build:main": "webpack --env main --config ./config/webpack.config.js --mode production",
     "build:renderer": "webpack --env renderer --config ./config/webpack.config.js --mode production",
+    "dev": "npm run dev:main & npm run dev:renderer",
+    "dev:main": "webpack --watch --env main --config ./config/webpack.config.js --mode development",
+    "dev:renderer": "webpack --watch --env renderer --config ./config/webpack.config.js --mode development",
     "start": "electron dist/main.js",
     "test": "test"
   },
@@ -20,21 +23,25 @@
     "@babel/preset-react": "^7.0.0",
     "@cryptopapers/eslint-config": "^0.1.0",
     "@cryptopapers/prettier-config": "^1.0.0",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
-    "electron": "^4.0.5",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^1.19.1",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "css-loader": "^3.4.2",
+    "electron": "^4.0.5",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "ts-loader": "^6.2.1"
