--- a/package.json
+++ b/package.json
@@ -25,25 +25,27 @@
     "@cryptopapers/prettier-config": "^1.0.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.4.2",
+    "electron": "^8.2.0",
     "eslint": "^6.8.0",
-    "eslint-loader": "^2.1.2",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^1.19.1",
+    "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
-    "webpack": "^4.41.2",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "css-loader": "^3.4.2",
-    "electron": "^4.0.5",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "ts-loader": "^6.2.1"
+    "react-dom": "^16.8.4"
   }
 }
