--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,22 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "./dist",
-    "sourceMap": true,
     "declaration": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "jsx": "react",
+    "lib": ["es2017", "dom"],
     "module": "es6",
     "moduleResolution": "node",
     "noImplicitAny": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
+    "outDir": "./dist",
+    "sourceMap": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"]
-  }
+  },
+  "exclude": ["dist/", "node_modules/"],
+  "include": [
+    "main/**/*",
+    "renderer/**/*"
+  ]
 }
