--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,11 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
+    "rootDirs": ["./src/main", "./src/renderer"],
     "sourceMap": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
   },
-  "exclude": ["dist/", "node_modules/"],
-  "include": [
-    "main/**/*",
-    "renderer/**/*"
-  ]
+  "exclude": ["dist", "node_modules"],
+  "include": ["src/**/*"]
 }
