--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "@cryptopapers/eslint-config": "^0.1.0",
@@ -29,8 +30,8 @@
     "@typescript-eslint/parser": "^2.25.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.1.0",
+    "babel-plugin-react-css-modules": "^5.2.6",
     "css-loader": "^3.4.2",
-    "electron": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.16.0",
@@ -38,13 +39,19 @@
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "postcss-nested": "^4.2.1",
+    "postcss-scss": "^2.0.0",
     "prettier": "^1.19.1",
+    "resolve-url-loader": "^3.1.1",
+    "sass-loader": "^8.0.2",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "electron": "^8.2.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   }
