--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@cryptopapers/eslint-config": "^0.1.0",
     "@cryptopapers/prettier-config": "^1.0.0",
     "@types/react": "^16.9.19",
+    "@types/react-css-modules": "^4.6.2",
     "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
