--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:main": "webpack --watch --env main --config ./config/webpack.config.js --mode development",
     "dev:renderer": "webpack --watch --env renderer --config ./config/webpack.config.js --mode development",
     "start": "electron dist/main.js",
-    "test": "test"
+    "test": "jest --config config/jest.config.js"
   },
   "author": "Marek Rewers",
   "license": "MIT",
@@ -24,6 +24,8 @@
     "@babel/preset-react": "^7.0.0",
     "@cryptopapers/eslint-config": "^0.1.0",
     "@cryptopapers/prettier-config": "^1.0.0",
+    "@testing-library/react": "^10.0.2",
+    "@types/jest": "^25.2.1",
     "@types/react": "^16.9.19",
     "@types/react-css-modules": "^4.6.2",
     "@types/react-dom": "^16.9.5",
@@ -40,6 +42,7 @@
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "postcss-nested": "^4.2.1",
@@ -47,6 +50,7 @@
     "prettier": "^1.19.1",
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^8.0.2",
+    "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
     "webpack": "^4.42.1",
