Tweak to compile for more modern browsers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,15 +6,16 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "jsx": "preserve",
-    "lib": ["es2017", "dom"],
+    "lib": ["es2020", "dom"],
     "module": "es6",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
     "rootDirs": ["./src/main", "./src/renderer"],
     "sourceMap": true,
-    "target": "es5",
-    "typeRoots": ["node_modules/@types"],
+    "strict": true,
+    "target": "es6",
+    "typeRoots": ["node_modules/@types"]
   },
   "exclude": ["dist", "node_modules"],
   "include": ["src/**/*"]
