--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.2",
     "@types/jest": "^25.2.1",
+    "@types/jest-axe": "^3.2.2",
     "@types/react": "^16.9.19",
     "@types/react-css-modules": "^4.6.2",
     "@types/react-dom": "^16.9.5",
@@ -45,6 +46,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^25.3.0",
+    "jest-axe": "^3.4.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "postcss-nested": "^4.2.1",
